@@ -1,2 +1,2 @@
-#define VERSION "2.4.6"
-#define YEARS   "2005-2008"
+#define VERSION "2.4.7"
+#define YEARS   "2005-2009"
